Prevent text bleed from side nav

--- a/source/assets/stylesheets/foundation/_overrides.scss
+++ b/source/assets/stylesheets/foundation/_overrides.scss
@@ -203,6 +203,7 @@ li:not(:last-child) {
   display: inline-block;
   overflow-y: auto;
   max-height: 100%;
+  max-width: 300px;
 }
 
 @media only screen and (min-width: 800px) {
